--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="app_name">송죽 학사</string>
-	<string name="full_name">송죽 학사 v1.0.1 [15]</string>
+	<string name="full_name">송죽 학사 v1.1.0 [16]</string>
 	<string name="preference_name">설정</string>
 	<string name="copyright">Copyright ⓒ 2013-2014 by KENNYSOFT. All Rights Reserved.</string>
 	
 	<string name="ok">확인</string>
 	<string name="cancel">취소</string>
 	
-	<string name="login_failed">로그인 실패</string>
+	<string name="login_error">로그인 실패</string>
+	<string name="login_failed">로그인 시도 불가</string>
+	<string name="login_failed_message">Wi-Fi 상태를 확인해 주십시오.</string>
 	
 	<string name="download_pc_only">PC에서만 지원됩니다.</string>
 	<string name="download_unavailable">Android 2.2 이하에서는 파일 다운로드 기능이 지원되지 않습니다.</string>
 	<string name="download_starting">다운로드 시작중...</string>
 	
-	<string name="menu_information">정보</string>
+	<string name="menu_refresh">새로고침</string>
 	<string name="menu_setting">설정</string>
 	<string name="menu_exit">종료</string>
 	
@@ -45,7 +47,7 @@
 	<string name="first_message">
 	<b>학교 내외에서의 송죽 학사 접근을 쉽고 빠르게!</b>\n\n
 	KENNYSOFT의 \"송죽 학사\" 앱은 계정 정보 기억 및 자동 로그인과 외부 접속시 인증 메시지 자동 입력을 지원하여 학교 내외에서 경기과학고등학교 송죽 학사 시스템을 간편하게 이용할 수 있도록 도와드립니다.\n\n
-	이 앱은 GPL 라이선스 하에 배포되며, <b>메시지 받기, 읽기, 쓰기</b>, <b>SD 카드의 콘텐츠 수정 또는 삭제</b>, <b>휴대전화 상태 및 ID 읽기</b> 및 <b>인터넷 접속</b> 권한을 가지고 있습니다. 이 앱의 사용에 동의하신다면 동의 버튼을 눌러주세요. 거부 버튼을 누를 시 이 어플리케이션이 종료됩니다.
+	이 앱은 GPL 라이선스 하에 배포되며, <b>메시지 받기, 읽기, 쓰기</b>, <b>SD 카드의 콘텐츠 수정 또는 삭제</b>, <b>휴대전화 상태 및 ID 읽기</b> 및 <b>인터넷 접속</b> 권한을 가지고 있습니다. 이 앱의 사용에 동의하신다면 동의 버튼을 눌러주세요. 거부 버튼을 누를 시 이 앱이 종료됩니다.
 	</string>
 	<string name="first_agree">동의</string>
 	<string name="first_disagree">거부</string>
@@ -64,11 +66,21 @@
 	</string>
 	
 	<string name="update">
-	<b>v1.0.1</b> [15] <i>(14.07/14)</i>\n
+	<b>v1.1.0</b> [16] <i>(14.11.03)</i>\n
+	* Android 5.0 스타일의 Material 디자인을 사용하도록 변경하였습니다.\n
+	* 링크를 클릭했을 때 바로 어플리케이션을 실행하는 기능을 추가하였습니다.\n
+	* 액션바의 정보 버튼을 새로고침 버튼으로 변경하였습니다.\n
+	* 인증 메시지 수신시 [Web발신] 등의 키워드도 감지할 수 있도록 변경하였습니다.\n
+	* 로그인 시도시 네트워크 부분에서 오류가 발생하는 경우의 처리를 개선하였습니다.\n
+	* 설정 화면에서 액션바를 제거하였습니다.\n
+	* Support Library 사용을 위해 요구 API 레벨을 7(Android 2.1)으로 변경하였습니다.\n
+	* [Android 2.3-] 실행시 강제 종료되던 오류를 수정하였습니다.\n
+	* [Android 2.3-] 액션바를 사용할 수 있도록 개선하였습니다.\n\n
+	<b>v1.0.1</b> [15] <i>(14.07.14)</i>\n
 	* 전화 관련 기능이 없는 기기에서의 오류를 수정하였습니다.\n
 	* 앱 설명을 일부 변경하였습니다.\n\n
-	<b>v1.0.0</b> [14] <i>(14.07/01)</i>\n
-	* 이 프로젝트가 GPL 라이선스 하에 github에 공개되었습니다.\n
+	<b>v1.0.0</b> [14] <i>(14.07.01)</i>\n
+	* 이 프로젝트가 GPL 라이선스 하에 GitHub에 공개되었습니다.\n
 	&#160;&#160;# 자세한 내용은 https://github.com/KENNYSOFT/Student를 참고하세요.\n
 	* 구버전에서 업그레이드시 비밀번호를 암호화하도록 변경하였습니다.\n
 	* 아이디를 입력할 때 영어와 숫자만 사용할 수 있도록 변경하였습니다.\n
@@ -77,7 +89,7 @@
 	* 파일명의 +를 모두 공백으로 치환하도록 변경하였습니다.\n
 	* 송죽 학사 로그인 API의 결과가 WebView에 출력되지 않도록 변경하였습니다.\n
 	* 액션들의 모드 중 withText를 삭제하였습니다.\n\n
-	<b>v1.0.0 RC</b> [13] <i>(14.06/11)</i>\n
+	<b>v1.0.0 RC</b> [13] <i>(14.06.11)</i>\n
 	* 비밀번호를 데이터 내에 평문으로 저장하지 않도록 변경하였습니다.\n
 	* 송죽 학사 로그인 API를 사용하도록 변경하였습니다.\n
 	* 로그인 여부 탐지 알고리즘을 개선하였습니다.\n
@@ -86,7 +98,7 @@
 	* 네비게이션 드로어에서 상벌점 통계 링크를 학교 홈페이지로 변경하였습니다.\n
 	* 3월, 6월, 9월, 12월에 테마 배너가 제대로 표시되지 않던 오류를 수정하였습니다.\n
 	* 나눔 고딕 폰트 다운로드 시도시 오류로 처리하도록 변경하였습니다.\n\n
-	<b>v1.0.0 BETA</b> [12] <i>(14.04/22)</i>\n
+	<b>v1.0.0 BETA</b> [12] <i>(14.04.22)</i>\n
 	* [Android 2.1+] 송죽 학사 시스템의 SMS 자동 인증 기능을 사용할 수 있도록 개선하였습니다.\n
 	&#160;&#160;# SPECIAL THANKS TO gs13067\n
 	* [Android 3.0+] 네비게이션 드로어를 추가하여 선생님, 학생 검색 및 상벌점 통계 바로가기 등을 제공합니다.\n
@@ -100,19 +112,19 @@
 	* 발신 번호 필터 사용 설정이 추가되어 학교 번호에서 발신되지 않은 메시지도 인식할 수 있도록 변경하였습니다.\n
 	* 웹페이지 내에서 로그아웃하는 경우 앱이 종료되도록 변경하였습니다.\n
 	* 학부모 아이디 형식과 추후에 변경될 학생 아이디 형식을 고려하여 아이디의 숫자 제한을 해제하였습니다.\n\n
-	<b>v0.9.6</b> [11] <i>(14.02/28)</i>\n
+	<b>v0.9.6</b> [11] <i>(14.02.28)</i>\n
 	* [Android 3.0+] [MENU] 버튼이 없는 일부 기기에서 액션 오버플로 버튼이 보이도록 변경하였습니다.\n
 	* 앱 설명을 일부 수정하였습니다.\n\n
-	<b>v0.9.5</b> [10] <i>(14.02/26)</i>\n
+	<b>v0.9.5</b> [10] <i>(14.02.26)</i>\n
 	* [Android 2.3+] 다운로드 매니저를 통한 파일 다운로드 기능을 추가하였습니다.\n
 	&#160;&#160;# 이 기능과 함께 \"SD 카드의 콘텐츠 수정 또는 삭제\" 권한이 추가되었습니다.\n\n
-	<b>v0.9.2</b> [9] <i>(14.01/12)</i>\n
+	<b>v0.9.2</b> [9] <i>(14.01.12)</i>\n
 	* 비밀번호 입력 수 제한을 30자까지로 변경하였습니다.\n
 	* 액션들의 모드를 ifRoom으로 변경하였습니다.\n\n
-	<b>v0.9.1</b> [8] <i>(14.01/02)</i>\n
+	<b>v0.9.1</b> [8] <i>(14.01.02)</i>\n
 	* 문자 메시지 수신 관련 문제를 수정하였습니다.\n
 	* 아이디와 비밀번호를 변경한 후 바로 적용되지 않던 문제를 수정하였습니다.\n\n
-	<b>v0.9.0</b> [7] <i>(14.01/01)</i>\n
+	<b>v0.9.0</b> [7] <i>(14.01.01)</i>\n
 	* 프로그레스 바가 나타나도록 변경하였습니다.\n
 	* 문자 메시지를 더 잘 수신하도록 변경하였습니다.\n
 	* [BACK] 버튼으로 뒤로가기에 관한 동작을 변경하였습니다.\n
@@ -122,24 +134,24 @@
 	* [Android 3.0+] [MENU] 버튼으로도 액션바를 볼 수 있도록 변경하였습니다.\n
 	* [Android 4.1+] 설정 화면 액션바의 뒤로가기 버튼에 관한 동작을 변경하였습니다.\n
 	* [Android 4.4+] WebView 변경 사항으로 인한 오류를 해결하였습니다.\n\n
-	<b>v0.8.1</b> [6] <i>(13.12/10)</i>\n
+	<b>v0.8.1</b> [6] <i>(13.12.10)</i>\n
 	* 캐시를 사용하도록 다시 변경하였습니다.\n
 	* 앱 실행 도중 확대/축소 강제 사용 설정을 바꿔도 적용되도록 수정하였습니다.\n
 	* [Android 2.3-] getActonBar() 메소드에서 발생하던 오류를 수정하였습니다.\n\n
-	<b>v0.8.0</b> [5] <i>(13.12/10)</i>\n
+	<b>v0.8.0</b> [5] <i>(13.12.10)</i>\n
 	* 웹페이지 로딩 속도를 대폭 개선시켰습니다.\n
 	* [Android 3.0+] 송죽 학사에 헤더가 추가됨에 따라 액션바가 약 3초 후에 사라지도록 변경하였습니다.\n
 	&#160;&#160;# 다시 나타나게 하려면 헤더 위쪽 부분을 클릭해 주세요.\n
 	* 임시적으로 가로 보기를 제한하였습니다.\n\n
-	<b>v0.7.1</b> [4] <i>(13.12/10)</i>\n
+	<b>v0.7.1</b> [4] <i>(13.12.10)</i>\n
 	* 확대/축소 강제 사용 설정을 추가하였습니다.\n\n
-	<b>v0.7.0</b> [3] <i>(13.11/26)</i>\n
+	<b>v0.7.0</b> [3] <i>(13.11.26)</i>\n
 	* 변경된 송죽 학사 시스템에서 사용이 가능하도록 변경하였습니다.\n
 	* 송죽 학사의 모바일 지원에 대응하여 확대/축소 기능을 삭제하였습니다.\n\n
-	<b>v0.6.0</b> [2] <i>(13.11/04)</i>\n
+	<b>v0.6.0</b> [2] <i>(13.11.04)</i>\n
 	* 안정성을 향상시켰습니다.\n
 	* 자동 로그인 사용 여부를 설정할 수 있도록 변경하였습니다.\n\n
-	<b>v0.5.0</b> [1] <i>(13.11/03)</i>\n
+	<b>v0.5.0</b> [1] <i>(13.11.03)</i>\n
 	* 최초 릴리즈입니다.
 	</string>
 </resources>
