--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="app_name">송죽 학사 </string>
-	<string name="full_name">송죽 학사 v1.2.0 [17]</string>
+	<string name="full_name">송죽 학사 v1.2.5 [18]</string>
 	<string name="preference_name">설정</string>
 	<string name="account_name">계정</string>
 	<string name="copyright">Copyright ⓒ 2013-2015 by KENNYSOFT. All Rights Reserved.</string>
@@ -75,6 +75,12 @@
 	</string>
 	
 	<string name="update">
+	<b>v1.2.5</b> [18] <i>(15.03.20)</i>\n
+	* Android 5.1 지원을 추가하였습니다.\n
+	* Support Library v22를 사용하도록 변경하였습니다.\n
+	* 당겨서 새로고침 기능을 추가하였습니다.\n
+	* 최초 실행시 계정 화면에서 비밀번호 칸이 활성화되어 있던 오류를 수정하였습니다.\n
+	* 주소록 접근 관련 권한을 제거하였습니다.\n\n
 	<b>v1.2.0</b> [17] <i>(15.01.01)</i>\n
 	* 태블릿을 공식적으로 지원하는 최초 릴리즈입니다.\n
 	* 액션 버튼의 디자인을 가이드라인에 맞도록 변경하였습니다.\n
@@ -84,6 +90,7 @@
 	* 설정 화면에 액션바를 다시 추가하였습니다.\n
 	* 계정 설정 화면을 추가하였습니다.\n
 	* 인증 메시지 형식 변경으로 인식이 불가능했던 오류를 수정하였습니다.\n
+	&#160;&#160;# [Web발신]이 붙은 경우에도 정상적으로 처리합니다.\n
 	* 인증 메시지 자동 읽음 확인 기능을 제거하였습니다.\n\n
 	<b>v1.1.0</b> [16] <i>(14.11.03)</i>\n
 	* Android 5.0 스타일의 Material 디자인을 사용하도록 변경하였습니다.\n
@@ -112,7 +119,7 @@
 	* 비밀번호를 데이터 내에 평문으로 저장하지 않도록 변경하였습니다.\n
 	* 송죽 학사 로그인 API를 사용하도록 변경하였습니다.\n
 	* 로그인 여부 탐지 알고리즘을 개선하였습니다.\n
-	* 로그인 관리를 위해 번호가 있는 기기일 경우 이를 수집하도록 변경하였습니다.\n
+	* 로그인 관리를 위해 번호가 있는 기기일 경우 이를 수집하는 기능을 추가하였습니다.\n
 	&#160;&#160;# 이 기능과 함께 \"휴대전화 상태 및 ID 읽기\" 권한이 추가되었습니다.\n
 	* 네비게이션 드로어에서 상벌점 통계 링크를 학교 홈페이지로 변경하였습니다.\n
 	* 3월, 6월, 9월, 12월에 테마 배너가 제대로 표시되지 않던 오류를 수정하였습니다.\n
@@ -156,7 +163,7 @@
 	<b>v0.8.1</b> [6] <i>(13.12.10)</i>\n
 	* 캐시를 사용하도록 다시 변경하였습니다.\n
 	* 앱 실행 도중 확대/축소 강제 사용 설정을 바꿔도 적용되도록 수정하였습니다.\n
-	* [Android 2.3-] getActonBar() 메소드에서 발생하던 오류를 수정하였습니다.\n\n
+	* [Android 2.3-] getActionBar()에서 발생하던 오류를 수정하였습니다.\n\n
 	<b>v0.8.0</b> [5] <i>(13.12.10)</i>\n
 	* 웹페이지 로딩 속도를 대폭 개선시켰습니다.\n
 	* [Android 3.0+] 송죽 학사에 헤더가 추가됨에 따라 액션바가 약 3초 후에 사라지도록 변경하였습니다.\n
